test/org/midica/testfiles/failing/const-already-defined.midica
INCLUDE inc/instruments.midica

CONST $crd c,d,e
CONST $crd c+,d+,e+

CHORD test $crd

0  test  /4
